# Document_Based_RAG

./: .env.example  .gitattributes  .gitignore  pyproject.toml
data/: vector_db.pkl
notebook/: document.ipynb  index.html  pdf_loader.ipynb  script.js  style.css
