[project]
name = "rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.5",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.8.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-groq>=1.1.2",
    "langsmith>=0.7.22",
    "pip-system-certs>=5.3",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "sentence-transformers>=5.3.0",
    "transformers>=5.3.0",
]
